--- a/food_app/ViewController/LoginVC/LoginViewController.xib
+++ b/food_app/ViewController/LoginVC/LoginViewController.xib
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21678"/>
@@ -11,30 +11,35 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="LoginViewController" customModule="food_app" customModuleProvider="target">
             <connections>
+                <outlet property="emailUITextField" destination="36s-lK-SQv" id="Fj5-Rf-nlS"/>
                 <outlet property="headUIView" destination="OVA-wS-YRx" id="VbL-ba-lXG"/>
                 <outlet property="loginUIButton" destination="yhn-sp-0bj" id="1O1-Ho-II7"/>
+                <outlet property="passwordUITextField" destination="Q0A-l4-q3I" id="YEo-6x-Spx"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="i5M-Pr-FkT">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="I6C-aK-7iW">
-                    <rect key="frame" x="0.0" y="48" width="414" height="848"/>
+                    <rect key="frame" x="0.0" y="20" width="320" height="548"/>
                     <subviews>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="vTB-LA-DNb">
-                            <rect key="frame" x="0.0" y="0.0" width="414" height="848"/>
+                            <rect key="frame" x="0.0" y="0.0" width="320" height="740"/>
                             <subviews>
                                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="OVA-wS-YRx">
-                                    <rect key="frame" x="0.0" y="0.0" width="414" height="358.5"/>
+                                    <rect key="frame" x="0.0" y="0.0" width="320" height="227"/>
                                     <subviews>
                                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="BellaOlonjeLogo" translatesAutoresizingMaskIntoConstraints="NO" id="kb3-oH-OMn">
-                                            <rect key="frame" x="136" y="128" width="142" height="143.5"/>
+                                            <rect key="frame" x="126" y="79.5" width="68" height="68"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="kb3-oH-OMn" secondAttribute="height" multiplier="1:1" id="4x9-1D-haX"/>
+                                            </constraints>
                                         </imageView>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ure-Gi-ReY">
-                                            <rect key="frame" x="89" y="309.5" width="45" height="33"/>
+                                            <rect key="frame" x="89" y="178" width="45" height="33"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             <state key="normal" title="Login">
@@ -42,7 +47,7 @@
                                             </state>
                                         </button>
                                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="5kV-NJ-ASR">
-                                            <rect key="frame" x="261" y="309.5" width="64" height="33"/>
+                                            <rect key="frame" x="167" y="178" width="64" height="33"/>
                                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                             <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                             <state key="normal" title="Sign Up">
@@ -53,51 +58,57 @@
                                     <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                     <constraints>
                                         <constraint firstAttribute="bottom" secondItem="5kV-NJ-ASR" secondAttribute="bottom" constant="16" id="EpD-8U-7Sh"/>
-                                        <constraint firstAttribute="trailing" secondItem="kb3-oH-OMn" secondAttribute="trailing" constant="136" id="F3X-d8-8Oh"/>
-                                        <constraint firstItem="kb3-oH-OMn" firstAttribute="height" secondItem="OVA-wS-YRx" secondAttribute="height" multiplier="0.4" id="GAQ-P7-QHX"/>
+                                        <constraint firstItem="kb3-oH-OMn" firstAttribute="height" secondItem="OVA-wS-YRx" secondAttribute="height" multiplier="0.3" id="Fxj-Za-zm0"/>
                                         <constraint firstAttribute="trailing" secondItem="5kV-NJ-ASR" secondAttribute="trailing" constant="89" id="HdB-g9-E8e"/>
                                         <constraint firstAttribute="bottom" secondItem="ure-Gi-ReY" secondAttribute="bottom" constant="16" id="Ipv-Vh-iF8"/>
-                                        <constraint firstItem="kb3-oH-OMn" firstAttribute="top" secondItem="OVA-wS-YRx" secondAttribute="top" constant="128" id="aNv-ql-7jK"/>
+                                        <constraint firstItem="kb3-oH-OMn" firstAttribute="centerX" secondItem="OVA-wS-YRx" secondAttribute="centerX" id="UBs-rd-rE7"/>
+                                        <constraint firstItem="kb3-oH-OMn" firstAttribute="centerY" secondItem="OVA-wS-YRx" secondAttribute="centerY" id="lDs-zy-SbO"/>
                                         <constraint firstItem="ure-Gi-ReY" firstAttribute="leading" secondItem="OVA-wS-YRx" secondAttribute="leading" constant="89" id="otP-Qq-ZIc"/>
-                                        <constraint firstItem="kb3-oH-OMn" firstAttribute="leading" secondItem="OVA-wS-YRx" secondAttribute="leading" constant="136" id="wuK-iN-1bY"/>
                                     </constraints>
                                 </view>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="36s-lK-SQv">
-                                    <rect key="frame" x="50" y="450.5" width="314" height="34"/>
+                                    <rect key="frame" x="50" y="319" width="220" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Q0A-l4-q3I">
-                                    <rect key="frame" x="50" y="560.5" width="314" height="34"/>
+                                    <rect key="frame" x="50" y="429" width="220" height="34"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <textInputTraits key="textInputTraits"/>
                                 </textField>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Email Address" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1bU-fJ-YcG">
-                                    <rect key="frame" x="50" y="420.5" width="107.5" height="21"/>
+                                    <rect key="frame" x="50" y="289" width="107.5" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.40492208114522971" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Password" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tBM-Is-CXd">
-                                    <rect key="frame" x="50" y="530.5" width="73.5" height="21"/>
+                                    <rect key="frame" x="50" y="399" width="73.5" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" red="0.0" green="0.0" blue="0.0" alpha="0.4049220811" colorSpace="custom" customColorSpace="calibratedRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Forget password?" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gn2-l3-I6B">
-                                    <rect key="frame" x="50" y="628.5" width="136" height="21"/>
+                                    <rect key="frame" x="50" y="497" width="136" height="21"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                     <color key="textColor" red="1" green="0.27450980390000002" blue="0.039215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="yhn-sp-0bj">
-                                    <rect key="frame" x="50" y="760.5" width="314" height="46.5"/>
+                                    <rect key="frame" x="60" y="629" width="200" height="70"/>
                                     <color key="backgroundColor" red="1" green="0.27450980390000002" blue="0.039215686270000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                                    <constraints>
+                                        <constraint firstAttribute="height" constant="70" id="JNa-LZ-KWH"/>
+                                        <constraint firstAttribute="width" constant="200" id="cte-Yh-g9p"/>
+                                    </constraints>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                     <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                     <state key="normal" title="Login">
                                         <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     </state>
+                                    <connections>
+                                        <action selector="loginOnPress:" destination="-1" eventType="touchUpInside" id="CKB-k9-m1p"/>
+                                    </connections>
                                 </button>
                             </subviews>
                             <color key="backgroundColor" red="0.94901960784313721" green="0.94901960784313721" blue="0.94901960784313721" alpha="1" colorSpace="calibratedRGB"/>
@@ -105,19 +116,18 @@
                                 <constraint firstItem="1bU-fJ-YcG" firstAttribute="top" secondItem="OVA-wS-YRx" secondAttribute="bottom" constant="62" id="0ps-FN-Hdp"/>
                                 <constraint firstItem="36s-lK-SQv" firstAttribute="top" secondItem="1bU-fJ-YcG" secondAttribute="bottom" constant="9" id="3IS-hk-dmT"/>
                                 <constraint firstItem="1bU-fJ-YcG" firstAttribute="leading" secondItem="vTB-LA-DNb" secondAttribute="leading" constant="50" id="3q9-d4-Jy3"/>
-                                <constraint firstItem="yhn-sp-0bj" firstAttribute="height" secondItem="OVA-wS-YRx" secondAttribute="height" multiplier="0.13" id="4yD-D3-NlB"/>
                                 <constraint firstItem="36s-lK-SQv" firstAttribute="leading" secondItem="vTB-LA-DNb" secondAttribute="leading" constant="50" id="9co-Rd-3GN"/>
                                 <constraint firstItem="Q0A-l4-q3I" firstAttribute="leading" secondItem="vTB-LA-DNb" secondAttribute="leading" constant="50" id="C6b-DX-PUj"/>
                                 <constraint firstAttribute="trailing" secondItem="OVA-wS-YRx" secondAttribute="trailing" id="C84-El-CCO"/>
-                                <constraint firstItem="yhn-sp-0bj" firstAttribute="leading" secondItem="vTB-LA-DNb" secondAttribute="leading" constant="50" id="GCV-l7-Uzp"/>
                                 <constraint firstItem="OVA-wS-YRx" firstAttribute="top" secondItem="vTB-LA-DNb" secondAttribute="top" id="HQ3-UG-qd6"/>
                                 <constraint firstAttribute="bottom" secondItem="yhn-sp-0bj" secondAttribute="bottom" constant="41" id="N7C-ai-0CI"/>
                                 <constraint firstItem="gn2-l3-I6B" firstAttribute="top" secondItem="Q0A-l4-q3I" secondAttribute="bottom" constant="34" id="P60-fd-rho"/>
                                 <constraint firstAttribute="trailing" secondItem="Q0A-l4-q3I" secondAttribute="trailing" constant="50" id="Ty1-Fa-0PB"/>
                                 <constraint firstItem="tBM-Is-CXd" firstAttribute="leading" secondItem="vTB-LA-DNb" secondAttribute="leading" constant="50" id="Vt6-lT-AAE"/>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="gn2-l3-I6B" secondAttribute="trailing" id="Xbl-SV-CyB"/>
+                                <constraint firstItem="yhn-sp-0bj" firstAttribute="centerX" secondItem="vTB-LA-DNb" secondAttribute="centerX" id="YFa-MO-tG3"/>
                                 <constraint firstItem="tBM-Is-CXd" firstAttribute="top" secondItem="36s-lK-SQv" secondAttribute="bottom" constant="46" id="ZWe-u9-Muo"/>
-                                <constraint firstAttribute="trailing" secondItem="yhn-sp-0bj" secondAttribute="trailing" constant="50" id="jbZ-iV-CGP"/>
+                                <constraint firstItem="yhn-sp-0bj" firstAttribute="top" secondItem="gn2-l3-I6B" secondAttribute="bottom" constant="111" id="lCa-SZ-esB"/>
                                 <constraint firstItem="Q0A-l4-q3I" firstAttribute="top" secondItem="tBM-Is-CXd" secondAttribute="bottom" constant="9" id="ldk-qX-EXz"/>
                                 <constraint firstItem="OVA-wS-YRx" firstAttribute="leading" secondItem="vTB-LA-DNb" secondAttribute="leading" id="mFK-W3-Avb"/>
                                 <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="1bU-fJ-YcG" secondAttribute="trailing" id="pQH-SG-Rle"/>
@@ -128,11 +138,11 @@
                         </view>
                     </subviews>
                     <constraints>
-                        <constraint firstAttribute="bottom" secondItem="vTB-LA-DNb" secondAttribute="bottom" id="29b-CL-v95"/>
+                        <constraint firstAttribute="bottom" secondItem="vTB-LA-DNb" secondAttribute="bottom" priority="250" id="29b-CL-v95"/>
                         <constraint firstItem="vTB-LA-DNb" firstAttribute="top" secondItem="I6C-aK-7iW" secondAttribute="top" id="SND-mB-4rq"/>
                         <constraint firstAttribute="trailing" secondItem="vTB-LA-DNb" secondAttribute="trailing" id="UnF-5o-yXV"/>
                         <constraint firstItem="vTB-LA-DNb" firstAttribute="leading" secondItem="I6C-aK-7iW" secondAttribute="leading" id="YFq-Ze-I4n"/>
-                        <constraint firstItem="vTB-LA-DNb" firstAttribute="height" secondItem="I6C-aK-7iW" secondAttribute="height" id="dZT-eJ-zHV"/>
+                        <constraint firstItem="vTB-LA-DNb" firstAttribute="height" secondItem="I6C-aK-7iW" secondAttribute="height" priority="250" id="dZT-eJ-zHV"/>
                         <constraint firstItem="vTB-LA-DNb" firstAttribute="width" secondItem="I6C-aK-7iW" secondAttribute="width" id="yXE-iT-s2k"/>
                     </constraints>
                 </scrollView>
